2011-04-25  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* FiltersToolbox/skeleton_label.m: v0.3.3

	- Use new slow mode in graph_nn() to avoid running out of
	memory. Either method is, however, too slow, with a expected 35
	min to partition a 468x159x475 image with only 16510 skeleton
	voxels.

	* PointToolbox/graph_nn.m: v0.2.0

	- Add new input argument FAST, to choose between running it in
	vectorized mode (faster), or using a loop (less memory).

	- Fix bug. Voxels not connected to the skeleton (min distance =
	Inf) were being assigned skeleton index 1. Now they get NaN.

	- Remove predecessors list, we don't need it, and it needs a lot
	of memory.

2011-04-23  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* Delete matlab/test/bent-vessel-2d.mat

	- Not an image, just some vectors and matrices that are difficult
	to use.

	* FiltersToolbox/scinrrd_seg2label_stats.m: v0.2.0

	- Fix bug. Skeleton voxels that are not part of the branch voxels
	need to be added to the branch. This can happen because a labelled
	segmentation voxel can belong only to one object, but a skeleton
	bifurcation voxel can be actually shared by more than one.

	- Big rewrite, tidy up, and remove all the code about
	straightening, that is now under function pts_local_rigid().

	- Remove STRAIGHT input argument, that is now implicit if CC is
	provided.

	* PointsToolbox/pts_local_rigid.m: v0.1.1

	- Fix bug. The rotation and translation was wrong, and it became
	apparent when running the function on the 3D example
	bent-vessel-3d-2.mat. Now the points are correctly translated
	before and after rotation, and the procrustes registration is
	unnecessary within the loop.

2011-04-22  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* update_README.sh:

	- Avod recursing into directories. This avoids that it finds the
	*Toolbox directories in bin/

	* Move itk functions to new ItkToolbox directory

	- FiltersToolbox/ItkImFilter.cpp
	- FiltersToolbox/CMakeLists.txt